# mask-detector

./: .gitignore  pyproject.toml  requirements.txt  temp.json
mask_detection/: data_preprocessor.py  data_provider.py  mask_detector.py
tests/: test_mask_detection.py
